# osgFBX

./: CMakeLists.txt
data/: base_ambient.tga  base_emissive.tga  base_reflection.tga  static_mesh.max
examples/: CMakeLists.txt
examples/osgFbxViewer/: CMakeLists.txt  osgFbxViewer.cpp
src/osgPlugins/: CMakeLists.txt
src/osgPlugins/fbx/: CMakeLists.txt  ImportCameraAndLight.cpp  ImportFunction.h  ImportLine.cpp  ImportMaterial.cpp  ImportMesh.cpp  ImportTextureAndImage.cpp  ReaderWriterFBX.cpp  loadFBX.cpp  loadFBX.h  loadFBX_util.h
